--- a/top_nation_medalist_explore.ipynb
+++ b/top_nation_medalist_explore.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,26 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = train[['sex', 'height', 'weight', 'age']]\n",
-    "X_test = test[['sex', 'height', 'weight', 'age']]"
+    "# X_train = train[['sex', 'height', 'weight', 'age']]\n",
+    "# X_test = test[['sex', 'height', 'weight', 'age']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = DecisionTreeClassifier(criterion='entropy', max_depth=5, random_state=123).fit(X_train, y_train)"
+    "clf = DecisionTreeClassifier(criterion='entropy', max_depth=6, random_state=123).fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,14 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree classifier on training set: 0.684397\n"
+      "Accuracy of Decision Tree classifier on training set: 0.737589\n"
      ]
     }
    ],
@@ -439,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree classifier on training set: 0.553719\n"
+      "Accuracy of Decision Tree classifier on training set: 0.561983\n"
      ]
     }
    ],
