--- a/top_nation_medalist_explore.ipynb
+++ b/top_nation_medalist_explore.ipynb
@@ -439,28 +439,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree classifier on training set: 0.561983\n"
+      "Accuracy of Decision Tree classifier on test set: 0.561983\n"
      ]
     }
    ],
    "source": [
-    "print('Accuracy of Decision Tree classifier on training set: {:.6f}'\n",
+    "print('Accuracy of Decision Tree classifier on test set: {:.6f}'\n",
     "     .format(clf.score(X_test, y_test)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Let's create another notebook that splits be sex and splits athletics vs not athletics for reasons above."
+   ]
   },
   {
    "cell_type": "code",
